# gpu-particles

./: CMakeLists.txt  default.nix  embed_strings.py
embed/shaders/: particle.comp  particle.frag  particle.vert
include/: vao.h  vbo.h
include/shaders/: particle.frag  particle.vert
src/: main.cpp  vao.cpp  vbo.cpp
